# palmera

./: Cargo.toml
.docker/: dev.compose.yaml
.github/ISSUE_TEMPLATE/: USER-STORY.yml
examples/auth-test/: Cargo.toml
examples/local-storage/: Cargo.toml
examples/local-storage/src/: main.rs
examples/s3-storage/: Cargo.toml
examples/s3-storage/src/: main.rs
examples/table-management/: Cargo.toml
examples/table-management/src/: main.rs
migrations/: 20250602124422_init.up.sql  20250606211647_core.down.sql  20250606211647_core.up.sql
palmera-auth/: Cargo.toml
palmera-auth/migrations/: 20250602124422_init.down.sql  20250602124422_init.up.sql  20250612231815_init.down.sql  20250612231815_init.up.sql
palmera-auth/src/: config.rs  error.rs  jwt.rs  lib.rs  router.rs  schemas.rs
palmera-core/: Cargo.toml
palmera-core/src/: base.rs  events.rs  hook.rs  lib.rs
palmera-database/: Cargo.toml
palmera-database/src/sqlite/: helpers.rs  mod.rs  schemas.rs
palmera-rest/: Cargo.toml
palmera-rest/src/: router.rs  utils.rs
palmera-storage/: Cargo.toml  README.md
palmera-storage/src/: lib.rs  local.rs  s3.rs  traits.rs
