[package]
name = "palmera-database"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-query = { version = "0.32.6", features = ["backend-sqlite", "thread-safe"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
